minor fixes, storage of timeout id by useRef, create getClassName function for Others component, replaced isOpen state to useVisibility hook

--- a/components/bl-transitions-component/styles/index.less
+++ b/components/bl-transitions-component/styles/index.less
@@ -7,13 +7,13 @@
   overflow: hidden;
 
   &.collapse-left {
-    &--transitions {
+    &--active {
       transition: width 400ms ease-out;
     }
   }
 
   &.collapse-top {
-    &--transitions {
+    &--active {
       transition: height 400ms ease-out;
     }
   }
@@ -22,7 +22,7 @@
     opacity: 0;
     transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 
-    &--transitions {
+    &--active {
       opacity: 1;
     }
   }
@@ -32,7 +32,7 @@
     transform: scale(0.75, 0.5625);
     opacity: 0;
 
-    &--transitions {
+    &--active {
       transition: opacity 242ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, transform 161ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
       transform: none;
       opacity: 1;
@@ -43,7 +43,7 @@
     transform: scale(0);
     transition: transform 195ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 
-    &--transitions {
+    &--active {
       transform: none;
       transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     }
